Fix overlap in top bar on RichDoc

--- a/src/components/common.css
+++ b/src/components/common.css
@@ -25,7 +25,11 @@
   width: 50%;
 }
 
-/** Patching MUI components */
+/** Patches to 3rdparty components */
 .MuiSelect-root {
   height: 40px;
+}
+
+.ProseMirror {
+  outline: none !important;
 }
